--- a/index.html
+++ b/index.html
@@ -16,14 +16,25 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 </head>
 <body>
-    <div id="game"></div>
+    <div id="game">
+        <div id="blockOfInvaders"></div>
+
+    </div>
 </body>
 <script>
     //Initialise the game;
     var thisGame;
+    
     $(document).keydown((key) => {
         if(key.keyCode == keySpace && gameState == "stopped"){
+            // Initialising the Game;
             thisGame = new TheGame;
+        
+            // Creating Elements
+            thisGame.createElements();
+
+            // Moving the Invaders
+            thisGame.moveInvaders();
         }
     });
 
@@ -34,7 +45,7 @@
         }else if(key.keyCode == keyLeft && gameState == "running"){
             thisGame.moveShip(keyLeft);
         }
-    });
+    });    
 
 </script>
 </html>
