--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 
     <!-- JS -->
     <script src="js/main.js"></script>
+    <script src="js/ship.js"></script>
+    <script src="js/invader.js"></script>
 
     <!-- jquery -->
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -20,7 +22,12 @@
 <body>
     <div id="game">
         <div id="blockOfInvaders"></div>
+    </div>
 
+    <div id="status">
+        <div>Level: <span id="statusLevel">1</span></div>
+        <div>Lives: <span id="statusLives">5</span></div>
+        <div>Points: <span id="statusPoints">0</span></div>
     </div>
 </body>
 <script>
