invaders firing, colision in the ship

--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
             thisGame.createElements();
 
             // Moving the Invaders
-            thisGame.moveInvaders();
+            // thisGame.moveInvaders();
+
+            // Invaders start to attack;
+            // thisGame.invadersAttack();
         }
     });
 
